--- a/package.json
+++ b/package.json
@@ -1,6 +1,29 @@
 {
   "name": "brainhub-form-backend",
   "version": "1.0.0",
+  "author": "Antoni Sierakowski",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "node ./dist/index.js",
+    "dev": "nodemon --watch '*.ts' --exec 'yarn check-code && ts-node' src/index.ts",
+    "prod": "yarn build && yarn start",
+    "build": "yarn check-code && tsc",
+    "check-code": "eslint \"./src/**/*.ts\"",
+    "fix-code": "eslint \"./src/**/*.ts\" --fix"
+  },
+  "dependencies": {
+    "@types/jest": "^26.0.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "inversify": "^5.0.1",
+    "jest": "^26.1.0",
+    "joi": "^17.1.1",
+    "knex": "^0.21.2",
+    "nodemon": "^2.0.4",
+    "reflect-metadata": "^0.1.13",
+    "ts-jest": "^26.1.3",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
+  }
 }
