--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "brainhub-form-backend",
   "version": "1.0.0",
   "author": "Antoni Sierakowski",
-  "main": "index.js",
+  "main": "run.js",
   "license": "MIT",
   "scripts": {
     "start": "node ./dist/index.js",
-    "dev": "nodemon --watch '*.ts' --exec 'yarn check-code && ts-node' src/index.ts",
+    "dev": "nodemon --watch '*.ts' --exec 'yarn check-code && ts-node' src/run.ts",
     "prod": "yarn build && yarn start",
     "build": "yarn check-code && tsc",
     "check-code": "eslint \"./src/**/*.ts\"",
     "fix-code": "eslint \"./src/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@types/express": "^4.17.7",
     "@types/jest": "^26.0.5",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
     "dotenv": "^8.2.0",
+    "eslint": "^7.5.0",
     "express": "^4.17.1",
     "inversify": "^5.0.1",
     "jest": "^26.1.0",
