--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^26.0.5",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.5.0",
     "express": "^4.17.1",
