--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^7.5.0",
     "express": "^4.17.1",
     "inversify": "^5.0.1",
+    "inversify-express-utils": "^6.3.2",
     "jest": "^26.1.0",
     "joi": "^17.1.1",
     "knex": "^0.21.2",
