--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "prod": "yarn build && yarn start",
     "build": "yarn check-code && tsc",
     "check-code": "eslint \"./src/**/*.ts\"",
-    "fix-code": "eslint \"./src/**/*.ts\" --fix"
+    "fix-code": "eslint \"./src/**/*.ts\" --fix",
+    "init-db": "./db/create_db.sh"
   },
   "dependencies": {
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.5",
+    "@types/pg": "^7.14.4",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "body-parser": "^1.19.0",
