--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.5",
+    "@types/joi": "^14.3.4",
     "@types/pg": "^7.14.4",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
