--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.5",
     "@types/joi": "^14.3.4",
+    "@types/mock-knex": "^0.4.3",
     "@types/pg": "^7.14.4",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
@@ -29,6 +30,7 @@
     "jest": "^26.1.0",
     "joi": "^17.1.1",
     "knex": "^0.21.2",
+    "mock-knex": "^0.4.9",
     "nodemon": "^2.0.4",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
