--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest --config=jest.config.js"
   },
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.5",
     "@types/joi": "^14.3.4",
@@ -22,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^7.5.0",
     "express": "^4.17.1",
