--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^26.0.5",
     "@types/joi": "^14.3.4",
     "@types/mock-knex": "^0.4.3",
+    "@types/morgan": "^1.9.1",
     "@types/pg": "^7.14.4",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
@@ -33,6 +34,7 @@
     "joi": "^17.1.1",
     "knex": "^0.21.2",
     "mock-knex": "^0.4.9",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
